tests/snapshots/examples_fixtures/type_system__failing__47_main_with_parameters.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/47_main_with_parameters.flx
== compile ==
failed (compile)
== diagnostics ==
error[E411]: Invalid Main Signature

`fn main` cannot take parameters.

  examples/type_system/failing/47_main_with_parameters.flx:23:1
   |
23 | fn main(x: Int) {
   | ^^^^^^^^^^^^^^^
   | --------------- `main` declared with parameters

Hint:
  Define `fn main()` with zero parameters.
== stdout ==
<not executed>
